<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextAppearance="@style/ToolBar.TitleText"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/logo_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_22" />

        <!--<ImageView-->
            <!--android:id="@+id/iv_icon_centre"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_marginTop="@dimen/default_tiny_padding"-->
            <!--android:src="@drawable/ic_bili_logo_2016" />-->

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_33" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input_rounded_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical">

            <EditText
                android:padding="5dp"
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_login_username_default"
                android:singleLine="true"
                android:hint="@string/login_hint_account"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/black_80"
                android:textColorHint="@color/gray_20"
                android:textSize="16sp" />


            <ImageButton
                android:id="@+id/delete_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:src="@drawable/ic_edittext_clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_bg" />

        <EditText
            android:padding="5dp"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_login_password_default"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textColorHint="@color/gray_20"
            android:textSize="16sp" />
        <EditText
            android:padding="5dp"
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_login_password_default"
            android:hint="@string/login_hint_password2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textColorHint="@color/gray_20"
            android:textSize="16sp" />
        <EditText
            android:padding="5dp"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_local_email"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textColorHint="@color/gray_20"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_btn"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_btn"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
